force-app/main/default/objects/SAID_Search__c/SAID_Search__c.object-meta.xml
<CustomObject>
    <description>Object to store searched SA IDs</description>
    <label>SAID Search</label>
    <nameField>
        <displayFormat>SAID-{0000000000}</displayFormat>
        <label>SAID Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAID Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>