force-app/main/default/objects/SAID_Search__c/fields/Citizenship_Status__c.field-meta.xml
<CustomField>
    <fullName>Citizenship_Status__c</fullName>
    <description>Citizenship Status</description>
    <inlineHelpText>Citizenship Status</inlineHelpText>
    <label>Citizenship Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Citizenship_Status</valueSetName>
    </valueSet>
</CustomField>