force-app/main/default/objects/SAID_Search__c/fields/Date_of_Birth_DOB__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth_DOB__c</fullName>
    <description>Date of Birth (DOB)</description>
    <inlineHelpText>Date of Birth (DOB)</inlineHelpText>
    <label>Date of Birth (DOB)</label>
    <type>Date</type>
</CustomField>