force-app/main/default/objects/SAID_Search__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <description>A South African ID number is a 13-digit number</description>
    <externalId>true</externalId>
    <inlineHelpText>A South African ID number is a 13-digit number</inlineHelpText>
    <label>ID</label>
    <length>13</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>