force-app/main/default/objects/SAID_Search__c/fields/Is_SA_Citizen__c.field-meta.xml
<CustomField>
    <fullName>Is_SA_Citizen__c</fullName>
    <label>Is SA Citizen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>