force-app/main/default/objects/SAID_Search__c/fields/Search_Counter__c.field-meta.xml
<CustomField>
    <fullName>Search_Counter__c</fullName>
    <description>Search Counter</description>
    <inlineHelpText>Search Counter</inlineHelpText>
    <label>Search Counter</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>