force-app/main/default/objects/SAID_Search__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ID__c</columns>
    <columns>Citizenship_Status__c</columns>
    <columns>Date_of_Birth_DOB__c</columns>
    <columns>Gender__c</columns>
    <columns>Search_Counter__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>